final-submission/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dan-it-backend
  labels:
    app.kubernetes.io/part-of: dan-it-diploma
