final-submission/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dan-it-backend
  namespace: dan-it-backend
  labels:
    app.kubernetes.io/name: dan-it-backend
    app.kubernetes.io/part-of: dan-it-diploma
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dan-it-backend
  template:
    metadata:
      annotations:
        gitops.dan-it.dev/deployed-by: argocd
      labels:
        app.kubernetes.io/name: dan-it-backend
        app.kubernetes.io/part-of: dan-it-diploma
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backend
          image: mikoladolia/dan-it-backend:sha-20daf2cf9fe45f593285c7c7a5060aa65b8880f4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
